fix alignment and add hidden sidebar for now

--- a/static/styles/light.css
+++ b/static/styles/light.css
@@ -8,6 +8,12 @@ body {
     font-family: "Poppins", sans-serif !important;
 }
 
+.sidebar {
+    height: 100vh;
+    width: 200px;
+    transition: 300ms;
+}
+
 .dash-title {
     font-weight: bold;
     font-size: 24px;
